# pangolin_robot

./: .gitignore  .gitmodules  LICENSE  Pangolin_Config.py  Pangolin_ControlCmd.py  README.md
pangolin_apriltag/apriltag_localize/: package.xml  setup.py
pangolin_apriltag/pangolin_isaac_ros_apriltag/: CMakeLists.txt  package.xml
pangolin_base/: DXL_motor_control.py  Kalman.py  Pangolin_Config.py  Pangolin_ControlCmd.py  Pangolin_Gait.py  Pangolin_Kinematic.py  Pangolin_Kinematics.py  apriltag_following_final.py  head_shake_tail.py  log.py
pangolin_base/LOG/: DXL_motor_control.txt
pangolin_bringup/: CMakeLists.txt  package.xml
pangolin_bringup/config/: F710.config.yaml  ps3.config.yaml  twist_mux.yaml
pangolin_bringup/launch/: pangolin_bringup.launch.py  pangolin_demo.launch.py  teleop.launch.py
pangolin_control/: package.xml  setup.cfg  setup.py
pangolin_control/launch/: drive_controller.launch.py
pangolin_description/: CMakeLists.txt  package.xml
pangolin_description/config/: joint_names_pangolin_V3_URDF.yaml  joint_names_pangolin_urdf_20240701.yaml
pangolin_description/launch/: pangolin.launch.py
pangolin_description/meshes/: backbody_Link.STL  base_link.STL  cam_Link.STL  head_Link.STL  lb_Link.STL  lf_Link.STL  middle_Link.STL  rb_Link.STL  rf_Link.STL
pangolin_description/rviz/: pangolin_viz.rviz  urdf_config.rviz
pangolin_description/urdf/: pangolin.urdf  pangolin_urdf_20240701.urdf
routing_agent_interfaces/: CMakeLists.txt  package.xml
start/: bind_usb_devices.sh  build.sh  cmd_tset.py  i2c_test.py  joystick.py  sound.py
(+69 files in other folders)
